# asisim

./: Cargo.toml  README.md
lib/: Cargo.toml
lib/src/: camera.rs  connection.rs  img.rs  lib.rs  settings.rs
lib/tests/: asiair_test.rs  camera_test.rs  common.rs  connection_test.rs  setting_test.rs
sim/: Cargo.toml
sim/src/: lib.rs  main.rs  rtc.rs  sim.rs
sim/src/rpc/: app_handlers.rs  camera_handlers.rs  img_handlers.rs  misc_handlers.rs  mod.rs  protocol.rs  sample_raw.rs
sim/tests/: asiair_protocol_test.rs
sim/utils/fits2rs/: Cargo.toml
sim/utils/fits2rs/src/: main.rs
src/: lib.rs  main.rs
src/asiair/: mod.rs  rtc.rs
src/asiair/rpc/: discover.rs  misc_handlers.rs  mod.rs  protocol.rs
tests/: asiair_protocol_test.rs
