[package]
name = "asiair"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
chrono-tz = "0.10.3"
derive = "1.0.0"
env_logger = "0.11.8"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
byteorder = "1.5"
zip = "3.0.0"

[dev-dependencies]
asisim = { path = "../sim" }
rand = "0.9.1"
